# my-tinyraytracer

./: CMakeLists.txt  README.md  geometry.h  main.cpp
include/: geometry.h  light.h  material.h  model.h  types.h
src/: main.cpp  model.cpp
